--- a/src/components/App/styles.css
+++ b/src/components/App/styles.css
@@ -1,13 +1,11 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box; /* Не розумію цього. */
-}
-
-html, body {
+.main-container {
+    height: 100%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
-body {
-    height: 100vh;
+.chat-container {
+    width: 100%;
+    height: calc(100% - 120px);
 }
