--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -4,5 +4,6 @@
     width: 100%;
     height: 70px;
     background-color: white;
-    box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.25);
+    z-index: 1;
 }
