--- a/src/components/Chat/styles.css
+++ b/src/components/Chat/styles.css
@@ -1,6 +1,7 @@
 .chat {
     width: 100%;
-    height: calc(100% - 120px);
+    /*height: calc(100% - 120px);*/
+    height: 100%;
     background-color: #586E47;
     overflow-y: scroll;
     scroll-behavior: smooth;
