--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,5 +1,6 @@
 .header {
     display: flex;
+    justify-content: flex-end;
     align-items: center;
     width: 100%;
     height: 70px;
@@ -7,3 +8,21 @@
     box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.25);
     z-index: 1;
 }
+
+.close-button {
+    width: 32px;
+    height: 32px;
+    padding: 20px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 0px 15px 2px rgb(0, 0, 0, 0.25);
+    cursor: pointer;
+}
+
+.icon {
+    width: 16px;
+    height: 16px;
+}
+
