--- a/src/components/Form/styles.css
+++ b/src/components/Form/styles.css
@@ -1,7 +1,7 @@
 .form {
     display: flex;
     width: 100%;
-    height: 70px;
+    min-height: 60px;
     box-shadow: 0px -4px 5px 0px rgba(0, 0, 0, 0.25);
 }
 
