--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -3,13 +3,47 @@
     justify-content: flex-end;
     align-items: center;
     width: 100%;
-    height: 70px;
+    min-height: 70px;
     background-color: white;
     box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.25);
     z-index: 1;
 }
 
-.close-button {
+.current-user-info {
+    width: 10%;
+    height: 100%;
+    font-family: sans-serif;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+}
+
+.current-profile-photo {
+    display: flex;
+    align-items: center;
+    margin-right: 14px;
+}
+
+#current-user-photo {
+    width: 38px;
+    height: 38px;
+}
+
+.current-user-nickname {
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.buttons {
+    width: 10%;
+    padding: 0px 20px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.open-panel-button {
     width: 32px;
     height: 32px;
     padding: 20px;
@@ -26,3 +60,11 @@
     height: 16px;
 }
 
+#status {
+    font-size: 18px;
+    color: #586E47;
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
