--- a/src/components/Member/styles.css
+++ b/src/components/Member/styles.css
@@ -1,7 +1,7 @@
 .member {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: flex-start;
     width: 100%;
     height: 60px;
     padding: 5px;
@@ -9,18 +9,29 @@
 }
 
 .profile-photo {
-    width: 20%;
-    height: 100%;
+    width: 48px;
+    height: 48px;
+    margin-right: 8px;
 }
 
 #user-photo {
-    width: 48px;
-    height: 48px;
+    width: 100%;
+    height: 100%;
 }
 
 .nickName {
-    width: 80%;
     font-size: 16px;
-    margin-left: 4px;
     font-family: sans-serif;
+}
+
+@media (max-width: 600px) {
+    .profile-photo {
+        width: 32px;
+        height: 32px;
+    }
+
+    .nickName {
+        font-size: 14px;
+        text-overflow: ellipsis;
+    }
 }
